@@ -28,6 +28,8 @@
 #include "AffineTransform.h"
 #include "FloatRect.h"
 #include "InlineFlowBox.h"
+#include "SVGInlineTextBox.h"
+#include "SVGRootInlineBox.h"
 
 namespace WebCore {
 
@@ -79,10 +81,21 @@ void RenderSVGTextPath::setStretchMethod(bool value)
     m_stretchMethod = value;
 }
 
-void RenderSVGTextPath::absoluteRects(Vector<IntRect>& rects, int tx, int ty)
+void RenderSVGTextPath::absoluteRects(Vector<IntRect>& rects, int, int)
 {
-    for (InlineRunBox* curr = firstLineBox(); curr; curr = curr->nextLineBox()) {
-        FloatRect rect(tx + curr->xPos(), ty + curr->yPos(), curr->width(), curr->height());
+    InlineRunBox* firstBox = firstLineBox();
+
+    SVGRootInlineBox* rootBox = firstBox ? static_cast<SVGInlineTextBox*>(firstBox)->svgRootInlineBox() : 0;
+    RenderObject* object = rootBox ? rootBox->object() : 0;
+
+    if (!object)
+        return;
+
+    int xRef = object->xPos() + xPos();
+    int yRef = object->yPos() + yPos();
+
+    for (InlineRunBox* curr = firstBox; curr; curr = curr->nextLineBox()) {
+        FloatRect rect(xRef + curr->xPos(), yRef + curr->yPos(), curr->width(), curr->height());
         rects.append(enclosingIntRect(absoluteTransform().mapRect(rect)));
     }
 }
